--- a/MietShedule.client/src/Components/TeacherSection.css
+++ b/MietShedule.client/src/Components/TeacherSection.css
@@ -1,3 +1,11 @@
 #teacher_input{
     width: 330px;
 }
+
+input{
+    width: 240px;
+    height: 30px;
+    margin: 8px 0;
+    font-size: 14px;
+    padding-left: 15px;
+}
